--- a/static/css/config.css
+++ b/static/css/config.css
@@ -29,13 +29,13 @@
     --bringer-s-text: #C5C7CE;
 
     /* A background color for accents, like buttons, highlighted blocks, etc. */
-    --bringer-s-accent: #3F6EE9;
+    --bringer-s-accent: #225077;
 
     /* A hovered button background color */
-    --bringer-button-hover-bg: #3F6EE9D0;
+    --bringer-button-hover-bg: #336088;
 
     /* Used as a color for text accents */
-    --bringer-s-text-accent: #5C9DFF;
+    --bringer-s-text-accent: #3577AE;
 
     /* Used as a text color for accented blocks */
     --bringer-s-accented-text: var(--bringer-s-heading);
@@ -44,7 +44,7 @@
     --bringer-s-border: #F5F7FA27;
 
     /* Used as a border color for accented blocks */
-    --bringer-s-border-accent: #5C9DFF80;
+    --bringer-s-border-accent: #336088;
     
     /* A default semi-transparent border color for blocks with a shining effect */
     --bringer-s-border-mute: #F5F7FA0D;
