--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                     <div class="bringer-hero-media-wrap bringer-masked-block">
                         <!-- Masked Media -->
                         <div class="bringer-hero-media bringer-masked-media" data-appear="fade-right" data-unload="fade-left" data-delay="150" data-threshold="0">
-                            <video src="{% static 'video/home03.mp4' %}" poster="{% static 'img/home/home03-hero2.jpg' %}" playsinline muted loop autoplay></video>
+                            <video src="{% static 'video/video.mp4' %}" poster="{% static 'img/home/home03-hero2.jpg' %}" playsinline muted loop autoplay></video>
                         </div>
                         <!-- Content -->
                         <div class="bringer-hero-media-content bringer-masked-content at-top-right">
