project section added

--- a/templates/header.html
+++ b/templates/header.html
@@ -46,7 +46,7 @@
                             <a href="{% url 'about' %}">About Us</a>
                         </li>
                         <li id="project">
-                            <a href="#">Projects</a>
+                            <a href="{% url 'projects' %}">Projects</a>
                         </li>
                         <li id="service">
                             <a href="#">Services</a>
