--- a/templates/index.html
+++ b/templates/index.html
@@ -326,7 +326,7 @@
             <!-- Section: Testimonials -->
             <section class="backlight-top">
                 <div class="bringer-expand-on-scroll">
-                    <img src="img/home/testimonials01.jpg" alt="Testimonials" data-unload="fade-up">
+                    <img src="{% static 'img/home/testimonials01.jpg' %}" alt="Testimonials" data-unload="fade-up">
                 </div><!-- .bringer-expand-on-scroll -->
                 <div class="stg-row stg-large-gap stg-top-gap-l">
                     <div class="stg-col-6 stg-tp-bottom-gap-l" data-unload="fade-left">
