--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,36 +9,36 @@
                     <div class="stg-row" data-stagger-appear="fade-left" data-stagger-delay="100">
                         <div class="stg-col-5 stg-tp-col-12 stg-tp-bottom-gap-l">
                             <div class="bringer-info-widget">
-                                <a href="#" class="bringer-logo footer-logo">
+                                <a href="{% url 'home' %}" class="bringer-logo footer-logo">
                                     <img src="{% static 'img/logo.png' %}" alt="bringer." width="180" height="24">
                                 </a>
                                 <div class="bringer-info-description">We are a passionate team of developers and designers who believe in the power of creativity. We help creative people create a strong online presence that shows their work and tells a story.</div>
                                 <span class="bringer-label">Follow us:</span>
                                 <ul class="bringer-socials-list" data-stagger-appear="fade-up" data-stagger-delay="75">
                                     <li>
-                                        <a href="https://www.instagram.com/pythoncoding4u/" target="_blank" class="bringer-socials-instagram">
+                                        <a href="https://www.instagram.com/pythoncoding4u/"  class="bringer-socials-instagram">
                                             <i></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://www.linkedin.com/company/pythoncoding4u" target="_blank" class="bringer-socials-linkedin">
+                                        <a href="https://www.linkedin.com/company/pythoncoding4u"  class="bringer-socials-linkedin">
                                             <i></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/people/Python-Coding/61555767339633/" target="_blank" class="bringer-socials-facebook">
+                                        <a href="https://www.facebook.com/people/Python-Coding/61555767339633/"  class="bringer-socials-facebook">
                                             <i></i>
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="https://www.youtube.com/channel/UClSmhe6_co8Vbe690nds3VA" target="_blank" class="bringer-socials-youtube">
+                                        <a href="https://www.youtube.com/channel/UClSmhe6_co8Vbe690nds3VA"  class="bringer-socials-youtube">
                                             <i></i>
                                         </a>
                                     </li>
                                    
                                     <li>
-                                        <a href="https://x.com/pythoncoding4u" target="_blank" class="bringer-socials-x">
+                                        <a href="https://x.com/pythoncoding4u"  class="bringer-socials-x">
                                             <i></i>
                                         </a>
                                     </li>
@@ -79,9 +79,9 @@
                                 <h6>Resources</h6>
                                 <div class="bringer-menu-widget">
                                     <ul>
-                                        <li><a href="pricing.html">Pricing</a></li>
-                                        <li><a href="faq.html">Help Center</a></li>
-                                        <li><a href="services.html">Our Services</a></li>
+                                        <li><a href="#">Pricing</a></li>
+                                        <li><a href="#">Help Center</a></li>
+                                        <li><a href="#">Our Services</a></li>
                                         <li><a href="#">Terms of Use</a></li>
                                         <li><a href="#">Privacy Policy</a></li>
                                     </ul>
