--- a/templates/header.html
+++ b/templates/header.html
@@ -67,7 +67,7 @@
         </div>
         <!-- Mobile Header -->
         <div class="bringer-mobile-header-inner">
-            <a href="#" class="bringer-logo">
+            <a href="{% url 'home' %}" class="bringer-logo">
                 <img src="{% static 'img/logo.png' %}" alt="bringer." width="160" height="24">
             </a>
             <a href="#" class="bringer-mobile-menu-toggler">
