testmonial and service added

--- a/templates/header.html
+++ b/templates/header.html
@@ -48,9 +48,11 @@
                         <li id="project">
                             <a href="{% url 'projects' %}">Projects</a>
                         </li>
+                        
                         <li id="service">
-                            <a href="#">Services</a>
+                            <a href="{% url 'services' %}">Services</a>
                         </li>
+
                         <li id="blog">
                             <a href="#">Blogs</a>
                         </li>
