--- a/templates/index.html
+++ b/templates/index.html
@@ -253,25 +253,27 @@
                             <h2>Our Portfolio</h2>
                             <p class="bringer-large-text">We are proud of our work, and we are always looking for new challenges. Take a look at some of our recent creative portfolio works.</p>
                             <div class="align-right">
-                                <a href="portfolio-column.html" class="bringer-arrow-link">Explore full Portfolio</a>
+                                <a href="portfolio-column.html" class="bringer-arrow-link">Explore Our Projects</a>
                             </div>
                         </div>
                     </div>
                     <div class="stg-col-6">
-                        <div class="bringer-grid-1col bringer-tp-grid-2cols stg-normal-gap bringer-parallax-media" data-stagger-appear="fade-left" data-stagger-unload="fade-right" data-threshold="0.25" data-stagger-delay="100">
+                        <div id="project-container" class="bringer-grid-1col bringer-tp-grid-2cols stg-normal-gap bringer-parallax-media" data-stagger-appear="fade-left" data-stagger-unload="fade-right" data-threshold="0.25" data-stagger-delay="100">
+
+
                             <!-- Card Item -->
                             <div class="bringer-block bringer-portfolio-card">
                                 <div class="bringer-portfolio-card-image">
-                                    <img class="bringer-lazy" src="img/null.png" data-src="img/portfolio/portfolio01.jpg" alt="" width="1200" height="1200">
+                                    <img class="bringer-lazy" src="image-one" data-src="image-one" alt="" width="1200" height="1200">
                                 </div>
                                 <div class="bringer-portfolio-card-footer">
                                     <div class="bringer-portfolio-card-title">
-                                        <span class="bringer-meta">Branding</span>
-                                        <h6>Curology</h6>
+                                        <span class="bringer-meta">category</span>
+                                        <h6>meta_title</h6>
                                     </div>
                                     <span class="bringer-icon bringer-icon-explore"></span>
                                 </div>
-                                <a href="portfolio-post01.html"></a>
+                                <a href="projects/slug"></a>
                             </div><!-- .bringer-portfolio-card -->
                                                         
                             <!-- Card Item -->
@@ -318,6 +320,9 @@
                                 </div>
                                 <a href="portfolio-post04.html"></a>
                             </div><!-- .bringer-portfolio-card -->
+
+
+
                         </div><!-- .bringer-grid -->
                     </div>
                 </div>
@@ -338,71 +343,13 @@
                             </div>
                         </div>
                     </div>
+
+
                     <div class="stg-col-6">
-                        <div class="bringer-grid-1col stg-normal-gap">
-                            <!-- Card Item -->
-                            <div class="bringer-block bringer-tetimonials-card" data-appear="zoom-out" data-unload="fade-right" data-threshold="0.75">
-                                <div class="bringer-tetimonials-card-descr">
-                                    "Before working with Bringer, our brand felt lost in the crowd. They not only gave us a stunning logo and website, but they also crafted a brand story that resonated with our customers. Now, we're seeing a surge in loyalty and engagement, and it all started with a spark!"
-                                </div>
-                                <div class="bringer-tetimonials-card-footer">
-                                    <div class="bringer-tetimonials-card-name">
-                                        <h6>Sarah Janson</h6>
-                                        <span class="bringer-meta">CEO of Bloom Eco-Spa</span>
-                                    </div>
-                                    <div class="bringer-tetimonials-card-rate">
-                                        <span class="bringer-tetimonials-stars5"></span>
-                                    </div>
-                                </div>
-                            </div><!-- .bringer-tetimonials-card -->
-                                                        
-                            <!-- Card Item -->
-                            <div class="bringer-block bringer-tetimonials-card" data-appear="zoom-out" data-unload="fade-right" data-threshold="0.75">
-                                <div class="bringer-tetimonials-card-descr">
-                                    "We knew we needed a digital boost, but we had no idea where to start. Bringer came in like a team of data-driven superheroes! They built targeted campaigns that reached our ideal audience, and the results were incredible. Our leads skyrocketed, and our conversion rates doubled. They truly understand the power of digital!"
-                                </div>
-                                <div class="bringer-tetimonials-card-footer">
-                                    <div class="bringer-tetimonials-card-name">
-                                        <h6>Michael Kaper</h6>
-                                        <span class="bringer-meta">VP of Marketing, Tech Inc.</span>
-                                    </div>
-                                    <div class="bringer-tetimonials-card-rate">
-                                        <span class="bringer-tetimonials-stars5"></span>
-                                    </div>
-                                </div>
-                            </div><!-- .bringer-tetimonials-card -->
-                                                        
-                            <!-- Card Item -->
-                            <div class="bringer-block bringer-tetimonials-card" data-appear="zoom-out" data-unload="fade-right" data-threshold="0.75">
-                                <div class="bringer-tetimonials-card-descr">
-                                    "Words cannot express how pleased we are with the visuals Bringer created for our brand. From the captivating infographics to the social media graphics that pop off the screen, they've injected an emotional punch into our communication that resonates deeply with our audience. Now, every visual tells our story with stunning clarity."
-                                </div>
-                                <div class="bringer-tetimonials-card-footer">
-                                    <div class="bringer-tetimonials-card-name">
-                                        <h6>Anna Larson</h6>
-                                        <span class="bringer-meta">Founder of StoryCraft Books</span>
-                                    </div>
-                                    <div class="bringer-tetimonials-card-rate">
-                                        <span class="bringer-tetimonials-stars4"></span>
-                                    </div>
-                                </div>
-                            </div><!-- .bringer-tetimonials-card -->
-                                                        
-                            <!-- Card Item -->
-                            <div class="bringer-block bringer-tetimonials-card" data-appear="zoom-out" data-unload="fade-right" data-threshold="0.75">
-                                <div class="bringer-tetimonials-card-descr">
-                                    "Our old website was a confusing maze. Bringer transformed it into a user-friendly paradise! They crafted a streamlined navigation that makes finding information a breeze, and the mobile experience is flawless. The result? Increased traffic, higher engagement, and happier customers. They've truly reimagined the digital experience."
-                                </div>
-                                <div class="bringer-tetimonials-card-footer">
-                                    <div class="bringer-tetimonials-card-name">
-                                        <h6>David Madison</h6>
-                                        <span class="bringer-meta">CTO of GreenTech Solutions</span>
-                                    </div>
-                                    <div class="bringer-tetimonials-card-rate">
-                                        <span class="bringer-tetimonials-stars4"></span>
-                                    </div>
-                                </div>
-                            </div><!-- .bringer-tetimonials-card -->
+                        <div class="bringer-grid-1col stg-normal-gap" id="testimonial-container">
+
+                            <!-- testmonials comming from ajax calling.... -->
+
                         </div><!-- .bringer-grid -->
                     </div>
                 </div><!-- .stg-row -->
@@ -436,6 +383,79 @@
 
 
         {% include 'footer.html' %}
+
+
+
+        <script>
+            $(document).ready(function() {
+
+                //project get request ajax call
+
+                $.ajax({
+                    url: "{% url 'project-list' %}",
+                    method: 'GET',
+                    success: function(data) {
+                        var projects = '';
+                        $.each(data, function(index, project) {
+                            projects += '<div class="bringer-block bringer-portfolio-card">';
+                            projects += '<div class="bringer-portfolio-card-image">';
+                            projects += '<img class="bringer-lazy" src="' + project.image_one + '" data-src="' + project.image_one + '" alt="" width="1200" height="1200">';
+                            projects += '</div>';
+                            projects += '<div class="bringer-portfolio-card-footer">';
+                            projects += '<div class="bringer-portfolio-card-title">';
+                            projects += '<span class="bringer-meta">' + project.category + '</span>';
+                            projects += '<h6>' + project.meta_title + '</h6>';
+                            projects += '</div>';
+                            projects += '<span class="bringer-icon bringer-icon-explore"></span>';
+                            projects += '</div>';
+                            projects += '<a href="projects/' + project.slug + '"></a>';
+                            projects += '</div><!-- .project-card -->';
+                        });
+                        $('#project-container').html(projects);
+                    },
+                    error: function(error) {
+                        console.log('Error:', error);
+                    }
+                });
+
+
+
+
+
+
+
+
+
+                //testmonails get request Ajax call
+                $.ajax({
+                    url: "{% url 'testimonial_lists' %}",
+                    method: 'GET',
+                    success: function(data) {
+                        var testimonials = '';
+                        $.each(data, function(index, testimonial) {
+                            testimonials += '<div class="bringer-block bringer-tetimonials-card" data-appear="zoom-out" data-unload="fade-right" data-threshold="0.75">';
+                            testimonials += '<div class="bringer-tetimonials-card-descr">';
+                            testimonials += '"' + testimonial.feedback + '"';
+                            testimonials += '</div>';
+                            testimonials += '<div class="bringer-tetimonials-card-footer">';
+                            testimonials += '<div class="bringer-tetimonials-card-name">';
+                            testimonials += '<h6>' + testimonial.name + '</h6>';
+                            testimonials += '<span class="bringer-meta">' + testimonial.designation + '</span>';
+                            testimonials += '</div>';
+                            testimonials += '<div class="bringer-tetimonials-card-rate">';
+                            testimonials += '<span class="bringer-tetimonials-stars' + testimonial.rating + '"></span>';
+                            testimonials += '</div>';
+                            testimonials += '</div>';
+                            testimonials += '</div><!-- .bringer-tetimonials-card -->';
+                        });
+                        $('#testimonial-container').html(testimonials);
+                    },
+                    error: function(error) {
+                        console.log('Error:', error);
+                    }
+                });
+            });
+        </script>
 
 
 
