--- a/templates/header.html
+++ b/templates/header.html
@@ -53,9 +53,9 @@
                             <a href="{% url 'services' %}">Services</a>
                         </li>
 
-                        <li id="blog">
+                        <!-- <li id="blog">
                             <a href="#">Blogs</a>
-                        </li>
+                        </li> -->
                         <li id="contact">
                             <a href="{% url 'contact' %}">Contacts</a>
                         </li>
