--- a/templates/footer.html
+++ b/templates/footer.html
@@ -76,14 +76,13 @@
                         </div>
                         <div class="stg-col-2 stg-tp-col-4 stg-m-col-4">
                             <div class="bringer-widget">
-                                <h6>Resources</h6>
+                                <h6>Contact Us</h6>
                                 <div class="bringer-menu-widget">
                                     <ul>
-                                        <li><a href="#">Pricing</a></li>
-                                        <li><a href="#">Help Center</a></li>
-                                        <li><a href="#">Our Services</a></li>
-                                        <li><a href="#">Terms of Use</a></li>
-                                        <li><a href="#">Privacy Policy</a></li>
+                                        <li><a href="#">Whitefield, Bangalore</a></li>
+                                        <li><a href="mailto:pythoncoding4u@codeajay.in">pythoncoding4u@<br>codeajay.in</a></li>
+                                        <li><a href="tel:8603862290">+918603862290</a></li>
+                                        
                                     </ul>
                                 </div>
                             </div><!-- .bringer-widget -->
@@ -95,7 +94,7 @@
             <!-- Footer Copyright Line -->
             <div class="bringer-footer-line stg-container">
                 <div class="align-center">
-                    Copyright &copy; 2024. All Rights Reserved.
+                    Copyright &copy; 2024. All Rights Reserved to <a href="https://codeajay.in">codeAj</a>.
                 </div>
             </div><!-- bringer-footer-line -->
         </footer>
